# UNAL-Trabajos

./: README.md  pyproject.toml
Mecanica-Celeste/: tarea_2.ipynb  tarea_2_variables_mercurio.py
Mecanica-Celeste/VariablesMovimientoMercurioT2/: notebook_variables_mercurio.ipynb  script_simplificado.py
